8226645: [TESTBUG] some AppCDS tests rely on illegal reflective access
Updated tests to use Lookup.defineClass instead of ClassLoader.defineClass.

Reviewed-by: iklam, dholmes, alanb